diesel_tests/tests/compile-fail/global/expressions_can_only_be_compared_for_equality_to_expressions_of_same_type.rs
#[macro_use]
extern crate diesel;

use diesel::*;

table! {
    users {
        id -> Serial,
        name -> VarChar,
    }
}

fn main() {
    use self::users::dsl::*;

    let pred = id.eq("string");
    //~^ ERROR E0277
    let pred = id.eq(name);
    //~^ ERROR type mismatch
}
